# QT_MJCom

./: CMakeLists.txt  MJCom.qrc  Main.qml  Modbus RTU master.lua  Modbus TCP master.lua  README.md  VisualizationWindow.qml  main.cpp
